Synchronization block