@@ -29,7 +29,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
-
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.cloud.ClusterState;
@@ -203,37 +202,42 @@ public class AllowListUrlCheckerTest extends SolrTestCaseJ4 {
   @Test
   public void testLiveNodesToHostUrlCache() throws Exception {
     // Given some live nodes defined in the cluster state.
-    Set<String> liveNodes =
-        new HashSet<>(Arrays.asList("1.2.3.4:8983_solr", "1.2.3.4:9000_", "1.2.3.4:9001_solr-2"));
+    Set<String> liveNodes = Set.of("1.2.3.4:8983_solr", "1.2.3.4:9000_", "1.2.3.4:9001_solr-2");
     ClusterState clusterState1 = new ClusterState(liveNodes, new HashMap<>());
 
     // When we call the AllowListUrlChecker.checkAllowList method on both valid and invalid urls.
     AtomicInteger callCount = new AtomicInteger();
-    AllowListUrlChecker checker = new AllowListUrlChecker(List.of()) {
-      @Override
-      Set<String> buildLiveHostUrls(Set<String> liveNodes) {
-        callCount.incrementAndGet();
-        return super.buildLiveHostUrls(liveNodes);
-      }
-    };
+    AllowListUrlChecker checker =
+        new AllowListUrlChecker(List.of()) {
+          @Override
+          Set<String> buildLiveHostUrls(Set<String> liveNodes) {
+            callCount.incrementAndGet();
+            return super.buildLiveHostUrls(liveNodes);
+          }
+        };
     for (int i = 0; i < 3; i++) {
-      checker.checkAllowList(List.of("1.2.3.4:8983", "1.2.3.4:9000", "1.2.3.4:9001"), clusterState1);
-      SolrException exception = expectThrows(
-          SolrException.class,
-          () -> checker.checkAllowList(List.of("1.1.3.4:8983"), clusterState1));
+      checker.checkAllowList(
+          List.of("1.2.3.4:8983", "1.2.3.4:9000", "1.2.3.4:9001"), clusterState1);
+      SolrException exception =
+          expectThrows(
+              SolrException.class,
+              () -> checker.checkAllowList(List.of("1.1.3.4:8983"), clusterState1));
       assertThat(exception.code(), equalTo(SolrException.ErrorCode.FORBIDDEN.code));
     }
-    // Then we verify that the AllowListUrlChecker caches the live host urls and only builds them once.
+    // Then we verify that the AllowListUrlChecker caches the live host urls and only builds them
+    // once.
     assertThat(callCount.get(), equalTo(1));
 
     // And when the ClusterState live nodes change.
-    liveNodes = new HashSet<>(Arrays.asList("2.3.4.5:8983_solr", "2.3.4.5:9000_", "2.3.4.5:9001_solr-2"));
+    liveNodes = Set.of("2.3.4.5:8983_solr", "2.3.4.5:9000_", "2.3.4.5:9001_solr-2");
     ClusterState clusterState2 = new ClusterState(liveNodes, new HashMap<>());
     for (int i = 0; i < 3; i++) {
-      checker.checkAllowList(List.of("2.3.4.5:8983", "2.3.4.5:9000", "2.3.4.5:9001"), clusterState2);
-      SolrException exception = expectThrows(
-          SolrException.class,
-          () -> checker.checkAllowList(List.of("1.1.3.4:8983"), clusterState2));
+      checker.checkAllowList(
+          List.of("2.3.4.5:8983", "2.3.4.5:9000", "2.3.4.5:9001"), clusterState2);
+      SolrException exception =
+          expectThrows(
+              SolrException.class,
+              () -> checker.checkAllowList(List.of("1.1.3.4:8983"), clusterState2));
       assertThat(exception.code(), equalTo(SolrException.ErrorCode.FORBIDDEN.code));
     }
     // Then the AllowListUrlChecker rebuilds the cache of live host urls.
